Updates to homepage layout and side-nav hover
Signed-off-by: Stephen Elford <steve@trafficwebsites.co.uk>

--- a/httpdocs/less/styles.less
+++ b/httpdocs/less/styles.less
@@ -205,8 +205,8 @@ video { max-width: 100% }
 }
 .sec-nav ul li a:hover,
 .sec-nav ul li.active > a{
-	background-color:#107baa !important;
-	color:#ffffff;
+	color: @cyan;
+	text-decoration: none;
 }
 
 .sec-nav ul li a.arrow {
@@ -299,9 +299,9 @@ video { max-width: 100% }
 	}
 	
 .text{
-	margin:0 1% 20px;
+	margin:0 4% 20px;
 	float:left;
-	width:75%;
+	width:71%;
 	}
 .text p,
 .text li {
