Added correct styling to standard and contact pages
Signed-off-by: Stephen Elford <steve@trafficwebsites.co.uk>

--- a/httpdocs/less/styles.less
+++ b/httpdocs/less/styles.less
@@ -57,7 +57,7 @@ li {
 a {
 	text-decoration:none;
 	font-family:helvetica;
-	color:#006797;
+	color:@cyan;
 }
 a:hover {
 	text-decoration: underline;
@@ -421,8 +421,8 @@ blockquote p {
 	padding-top: 0;
 }
 .contact-form{
-	background-color:#2b7aa8;
-	color:#ffffff;
+	background-color:@d-blue;
+	color:@white;
 	width:55%;
 	float:left;
 	padding:5px 0px 20px 0px;
@@ -431,8 +431,8 @@ blockquote p {
 .contact-form h1{
 	margin-top: 15px;
 	padding-left:20px;
-	color:#ffffff;
-	border-bottom: 1px dotted #ffffff;
+	color:@white;
+	border-bottom: 1px dotted @white;
 	}	
 .contact-form form{
 	padding: 21px 38px 0px 25px;
@@ -445,10 +445,10 @@ blockquote p {
 	display:inline-block;
 	}
 .button{
-	background-color: #7ca3ad;
+	background-color: @cyan;
     border: medium none;
     border-radius: 3px 3px 3px 3px;
-    color: #ffffff;
+    color: @white;
     float: right;
     font-family: helvetica;
     margin: 5px 0 10px;
@@ -462,13 +462,13 @@ blockquote p {
 	padding:41px 10px 20px 40px;
 	}	
 .email p, .email h2{
-	color:#2b7aa8;
+	color:@d-blue;
 	}
 .email h2{
 	padding-bottom:20px;
 	}
 .email a{
-	color:#f67f1e;
+	color:@cyan;
 	}
 /* !ALERTS
 ------------------------------------------------------------------------------*/
